update elsi new

--- a/elsi.ipynb
+++ b/elsi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -41,21 +41,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.368063</td>\n",
-       "      <td>0.394275</td>\n",
-       "      <td>0.237662</td>\n",
+       "      <td>0.357916</td>\n",
+       "      <td>0.396148</td>\n",
+       "      <td>0.245936</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.433701</td>\n",
-       "      <td>0.326610</td>\n",
-       "      <td>0.239689</td>\n",
+       "      <td>0.498801</td>\n",
+       "      <td>0.263397</td>\n",
+       "      <td>0.237802</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.210525</td>\n",
-       "      <td>0.436931</td>\n",
-       "      <td>0.352544</td>\n",
+       "      <td>0.298411</td>\n",
+       "      <td>0.217628</td>\n",
+       "      <td>0.483962</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -63,9 +63,9 @@
       ],
       "text/plain": [
        "          0         1         2\n",
-       "0  0.368063  0.394275  0.237662\n",
-       "1  0.433701  0.326610  0.239689\n",
-       "2  0.210525  0.436931  0.352544"
+       "0  0.357916  0.396148  0.245936\n",
+       "1  0.498801  0.263397  0.237802\n",
+       "2  0.298411  0.217628  0.483962"
       ]
      },
      "metadata": {},
@@ -85,49 +85,198 @@
       "\n",
       "Perulangan ke          :  1\n",
       "Path                   :  [0, 1, 2]\n",
-      "Probabilitas Path      :  0.0945035382307109\n",
+      "Probabilitas Path      :  0.18\n",
       "Probabilitas Poisson   :  2.7482048299180773e-06\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  1.298575401049937e-07\n",
+      "Probabilitas Total     :  2.4733843469262697e-07\n",
       "\n",
       "\n",
       "Perulangan ke          :  2\n",
       "Path                   :  [0, 1, 2, 2]\n",
-      "Probabilitas Path      :  0.03331661527691399\n",
+      "Probabilitas Path      :  0.18\n",
       "Probabilitas Poisson   :  5.496409659836154e-05\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  1.0454663703103679e-06\n",
-      "Error Path ke-  1  :  0.007013980187374948\n",
-      "Error Path ke-  2  :  0.014027960100068973\n",
-      "Error Path ke-  3  :  0.02104193741052267\n",
-      "Error Path ke-  4  :  0.028055898336500244\n",
-      "Error Path ke-  1  :  0.04261297470418681\n",
-      "Error Path ke-  2  :  0.05717005050179033\n",
-      "Error Path ke-  3  :  0.07172712089860712\n",
-      "Error Path ke-  4  :  0.0862841572904704\n",
-      "Error Path ke-  1  :  0.09977038613064708\n",
-      "Error Path ke-  2  :  0.11325661444267715\n",
-      "Error Path ke-  3  :  0.12674283775121312\n",
-      "Error Path ke-  4  :  0.14022902955626768\n",
-      "Error Path ke-  1  :  0.1581372132126272\n",
-      "Error Path ke-  2  :  0.1760453961676679\n",
-      "Error Path ke-  3  :  0.1939535724786354\n",
-      "Error Path ke-  4  :  0.21186170695654952\n",
-      "Error Path ke-  1  :  0.22360726560973132\n",
-      "Error Path ke-  2  :  0.2353528238029345\n",
-      "Error Path ke-  3  :  0.24709837763844555\n",
-      "Error Path ke-  4  :  0.2588439040366357\n",
-      "Error Path ke-  1  :  0.2687410576732986\n",
-      "Error Path ke-  2  :  0.27863821092236996\n",
-      "Error Path ke-  3  :  0.2885353604995216\n",
-      "Error Path ke-  4  :  0.29843248695717856\n",
-      "Error Path ke-  1  :  0.3183278436516607\n",
-      "Error Path ke-  2  :  0.33822319956700253\n",
-      "Error Path ke-  3  :  0.35811854810101473\n",
+      "Probabilitas Total     :  5.194107128545166e-06\n",
       "\n",
       "\n",
-      "Nilai Probabilitas SUM :  1.0454663703103679e-06\n",
-      "Nilai Error        SUM :  0.35811854810101473\n"
+      "Perulangan ke          :  3\n",
+      "Path                   :  [0, 1, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.0005234675866510624\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  5.230618992714078e-05\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  4\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.0029081532591725685\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.0003140399832526719\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  5\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.010575102760627522\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.001265799231709149\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  6\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.02711564810417313\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.0037062075610847308\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  7\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.05164885353175835\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.008354604378942981\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  8\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.07595419637023286\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.015190482052263938\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  9\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.08883531739208522\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.023185660617551607\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  10\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.08460506418293831\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.030800116394016055\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  11\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.06688147366240181\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.03681944902363222\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  12\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.04458764910826788\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.040832337443376325\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  13\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.025406067867958907\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.043118883551492626\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  14\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.012515304368452662\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.044245260944653364\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  15\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.005382926610087167\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.04472972433956121\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  16\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.0020389873523057453\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.04491323320126873\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  17\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.0006853738999347042\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.044974916852262854\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  18\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  0.00020581798796837962\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.04499344047118001\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  19\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  5.5551413756647675e-05\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.04499844009841811\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  20\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  1.3549125306499433e-05\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.044999659519695694\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  21\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  3.0009136891471617e-06\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.04499992960192772\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  22\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  6.062451897266992e-07\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.04499998416399479\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  23\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  1.1216377238236805e-07\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.044999994258734306\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  24\n",
+      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
+      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Poisson   :  1.9075471493600008e-08\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.044999995975526744\n",
+      "\n",
+      "\n",
+      "Nilai Probabilitas SUM :  0.044999995975526744\n",
+      "Nilai Error        SUM :  4.520193295089234\n"
      ]
     }
    ],
