--- a/elsi.ipynb
+++ b/elsi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,21 +41,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.357916</td>\n",
-       "      <td>0.396148</td>\n",
-       "      <td>0.245936</td>\n",
+       "      <td>0.354932</td>\n",
+       "      <td>0.179308</td>\n",
+       "      <td>0.465759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.498801</td>\n",
-       "      <td>0.263397</td>\n",
-       "      <td>0.237802</td>\n",
+       "      <td>0.193177</td>\n",
+       "      <td>0.392354</td>\n",
+       "      <td>0.414468</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.298411</td>\n",
-       "      <td>0.217628</td>\n",
-       "      <td>0.483962</td>\n",
+       "      <td>0.011349</td>\n",
+       "      <td>0.152567</td>\n",
+       "      <td>0.836084</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -63,9 +63,9 @@
       ],
       "text/plain": [
        "          0         1         2\n",
-       "0  0.357916  0.396148  0.245936\n",
-       "1  0.498801  0.263397  0.237802\n",
-       "2  0.298411  0.217628  0.483962"
+       "0  0.354932  0.179308  0.465759\n",
+       "1  0.193177  0.392354  0.414468\n",
+       "2  0.011349  0.152567  0.836084"
       ]
      },
      "metadata": {},
@@ -85,198 +85,70 @@
       "\n",
       "Perulangan ke          :  1\n",
       "Path                   :  [0, 1, 2]\n",
-      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Path      :  0.07431769752105517\n",
       "Probabilitas Poisson   :  2.7482048299180773e-06\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  2.4733843469262697e-07\n",
+      "Probabilitas Total     :  1.0212012763787727e-07\n",
       "\n",
       "\n",
       "Perulangan ke          :  2\n",
       "Path                   :  [0, 1, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Path      :  0.06213584847749301\n",
       "Probabilitas Poisson   :  5.496409659836154e-05\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  5.194107128545166e-06\n",
+      "Probabilitas Total     :  1.8097405166069182e-06\n",
       "\n",
       "\n",
       "Perulangan ke          :  3\n",
       "Path                   :  [0, 1, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Path      :  0.051950797653871575\n",
       "Probabilitas Poisson   :  0.0005234675866510624\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  5.230618992714078e-05\n",
+      "Probabilitas Total     :  1.540701985284183e-05\n",
       "\n",
       "\n",
       "Perulangan ke          :  4\n",
       "Path                   :  [0, 1, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Path      :  0.04343523815967694\n",
       "Probabilitas Poisson   :  0.0029081532591725685\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.0003140399832526719\n",
+      "Probabilitas Total     :  7.856518456134244e-05\n",
       "\n",
       "\n",
       "Perulangan ke          :  5\n",
       "Path                   :  [0, 1, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Path      :  0.03631551389369779\n",
       "Probabilitas Poisson   :  0.010575102760627522\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.001265799231709149\n",
+      "Probabilitas Total     :  0.00027058533017676776\n",
       "\n",
       "\n",
       "Perulangan ke          :  6\n",
       "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Path      :  0.030362825328944073\n",
       "Probabilitas Poisson   :  0.02711564810417313\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.0037062075610847308\n",
+      "Probabilitas Total     :  0.0006822391737108289\n",
       "\n",
       "\n",
       "Perulangan ke          :  7\n",
       "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Path      :  0.025385876808863082\n",
       "Probabilitas Poisson   :  0.05164885353175835\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.008354604378942981\n",
+      "Probabilitas Total     :  0.0013378148902489441\n",
       "\n",
       "\n",
       "Perulangan ke          :  8\n",
       "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
+      "Probabilitas Path      :  0.021224729068293997\n",
       "Probabilitas Poisson   :  0.07595419637023286\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.015190482052263938\n",
+      "Probabilitas Total     :  0.00214386851002804\n",
       "\n",
       "\n",
-      "Perulangan ke          :  9\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  0.08883531739208522\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.023185660617551607\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  10\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  0.08460506418293831\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.030800116394016055\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  11\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  0.06688147366240181\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.03681944902363222\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  12\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  0.04458764910826788\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.040832337443376325\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  13\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  0.025406067867958907\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.043118883551492626\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  14\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  0.012515304368452662\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.044245260944653364\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  15\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  0.005382926610087167\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.04472972433956121\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  16\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  0.0020389873523057453\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.04491323320126873\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  17\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  0.0006853738999347042\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.044974916852262854\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  18\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  0.00020581798796837962\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.04499344047118001\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  19\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  5.5551413756647675e-05\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.04499844009841811\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  20\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  1.3549125306499433e-05\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.044999659519695694\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  21\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  3.0009136891471617e-06\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.04499992960192772\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  22\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  6.062451897266992e-07\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.04499998416399479\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  23\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  1.1216377238236805e-07\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.044999994258734306\n",
-      "\n",
-      "\n",
-      "Perulangan ke          :  24\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.18\n",
-      "Probabilitas Poisson   :  1.9075471493600008e-08\n",
-      "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.044999995975526744\n",
-      "\n",
-      "\n",
-      "Nilai Probabilitas SUM :  0.044999995975526744\n",
-      "Nilai Error        SUM :  4.520193295089234\n"
+      "Nilai Probabilitas SUM :  0.00214386851002804\n",
+      "Nilai Error        SUM :  0.493643122176224\n"
      ]
     }
    ],
@@ -285,6 +157,8 @@
     "import random ## Import random untuk memilih path secara random\n",
     "import math ## Import math untuk menghitung probabilitas Poisson\n",
     "import pandas as pd ## Import pandas untuk menampilkan matriks\n",
+    "from IPython.display import display ## Import display untuk menampilkan matriks\n",
+    "\n",
     "U = [] ## Matriks probabilitas\n",
     "def generate_stochastic_matrix(n: int, m: int) -> np.ndarray: ## Fungsi untuk menghitung matriks probabilitas\n",
     "    matrix = np.random.rand(n, m) ## Matriks probabilitas\n",
