update lagi new elsi

--- a/elsi.ipynb
+++ b/elsi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -41,21 +41,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.354932</td>\n",
-       "      <td>0.179308</td>\n",
-       "      <td>0.465759</td>\n",
+       "      <td>0.200164</td>\n",
+       "      <td>0.438015</td>\n",
+       "      <td>0.361820</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.193177</td>\n",
-       "      <td>0.392354</td>\n",
-       "      <td>0.414468</td>\n",
+       "      <td>0.067552</td>\n",
+       "      <td>0.120532</td>\n",
+       "      <td>0.811917</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.011349</td>\n",
-       "      <td>0.152567</td>\n",
-       "      <td>0.836084</td>\n",
+       "      <td>0.885346</td>\n",
+       "      <td>0.110947</td>\n",
+       "      <td>0.003707</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -63,9 +63,9 @@
       ],
       "text/plain": [
        "          0         1         2\n",
-       "0  0.354932  0.179308  0.465759\n",
-       "1  0.193177  0.392354  0.414468\n",
-       "2  0.011349  0.152567  0.836084"
+       "0  0.200164  0.438015  0.361820\n",
+       "1  0.067552  0.120532  0.811917\n",
+       "2  0.885346  0.110947  0.003707"
       ]
      },
      "metadata": {},
@@ -81,74 +81,92 @@
       "N                 :  50\n",
       "lambda_t (0.5*t)  :  20.0\n",
       "k_sigma           :  0.5\n",
+      "t                 :  40\n",
+      "y                 :  3\n",
       "\n",
       "\n",
       "Perulangan ke          :  1\n",
       "Path                   :  [0, 1, 2]\n",
-      "Probabilitas Path      :  0.07431769752105517\n",
+      "Probabilitas Path      :  0.355631845222577\n",
       "Probabilitas Poisson   :  2.7482048299180773e-06\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  1.0212012763787727e-07\n",
+      "Probabilitas Total     :  4.886745773566822e-07\n",
       "\n",
       "\n",
       "Perulangan ke          :  2\n",
-      "Path                   :  [0, 1, 2, 2]\n",
-      "Probabilitas Path      :  0.06213584847749301\n",
-      "Probabilitas Poisson   :  5.496409659836154e-05\n",
+      "Path                   :  [0, 1, 2, 1, 2]\n",
+      "Probabilitas Path      :  0.03203513262329989\n",
+      "Probabilitas Poisson   :  0.0001832136553278718\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  1.8097405166069182e-06\n",
+      "Probabilitas Total     :  3.4233114507706464e-06\n",
       "\n",
       "\n",
       "Perulangan ke          :  3\n",
-      "Path                   :  [0, 1, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.051950797653871575\n",
-      "Probabilitas Poisson   :  0.0005234675866510624\n",
+      "Path                   :  [0, 1, 2, 0, 0, 1, 2]\n",
+      "Probabilitas Path      :  0.02241304921294781\n",
+      "Probabilitas Poisson   :  0.0001832136553278718\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  1.540701985284183e-05\n",
+      "Probabilitas Total     :  5.4764997874444706e-06\n",
       "\n",
       "\n",
       "Perulangan ke          :  4\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.04343523815967694\n",
-      "Probabilitas Poisson   :  0.0029081532591725685\n",
+      "Path                   :  [0, 1, 2, 0, 2]\n",
+      "Probabilitas Path      :  0.113921821696327\n",
+      "Probabilitas Poisson   :  5.496409659836154e-05\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  7.856518456134244e-05\n",
+      "Probabilitas Total     :  8.607304793633589e-06\n",
       "\n",
       "\n",
       "Perulangan ke          :  5\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.03631551389369779\n",
-      "Probabilitas Poisson   :  0.010575102760627522\n",
+      "Path                   :  [0, 1, 2, 0, 2, 0, 2]\n",
+      "Probabilitas Path      :  0.03649330517768214\n",
+      "Probabilitas Poisson   :  0.0005234675866510624\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.00027058533017676776\n",
+      "Probabilitas Total     :  1.8158835988774582e-05\n",
       "\n",
       "\n",
       "Perulangan ke          :  6\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.030362825328944073\n",
-      "Probabilitas Poisson   :  0.02711564810417313\n",
+      "Path                   :  [0, 1, 2, 0, 2, 0, 1, 2]\n",
+      "Probabilitas Path      :  0.03586911849387516\n",
+      "Probabilitas Poisson   :  0.0013086689666276558\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.0006822391737108289\n",
+      "Probabilitas Total     :  4.1629237105386856e-05\n",
       "\n",
       "\n",
       "Perulangan ke          :  7\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.025385876808863082\n",
-      "Probabilitas Poisson   :  0.05164885353175835\n",
+      "Path                   :  [0, 1, 2, 0, 1, 2]\n",
+      "Probabilitas Path      :  0.11197328664992165\n",
+      "Probabilitas Poisson   :  0.0001832136553278718\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.0013378148902489441\n",
+      "Probabilitas Total     :  5.1886754678490725e-05\n",
       "\n",
       "\n",
       "Perulangan ke          :  8\n",
-      "Path                   :  [0, 1, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Probabilitas Path      :  0.021224729068293997\n",
-      "Probabilitas Poisson   :  0.07595419637023286\n",
+      "Path                   :  [0, 1, 2, 0, 0, 2]\n",
+      "Probabilitas Path      :  0.022803076273819712\n",
+      "Probabilitas Poisson   :  5.496409659836154e-05\n",
       "Probabilitas Reward    :  0.5\n",
-      "Probabilitas Total     :  0.00214386851002804\n",
+      "Probabilitas Total     :  5.251342992201774e-05\n",
       "\n",
       "\n",
-      "Nilai Probabilitas SUM :  0.00214386851002804\n",
-      "Nilai Error        SUM :  0.493643122176224\n"
+      "Perulangan ke          :  9\n",
+      "Path                   :  [0, 1, 2, 0, 1, 2, 0, 2]\n",
+      "Probabilitas Path      :  0.03586911849387516\n",
+      "Probabilitas Poisson   :  0.0013086689666276558\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  7.598383103863001e-05\n",
+      "\n",
+      "\n",
+      "Perulangan ke          :  10\n",
+      "Path                   :  [0, 1, 2, 0, 1, 2, 0, 1, 2]\n",
+      "Probabilitas Path      :  0.03525560798791355\n",
+      "Probabilitas Poisson   :  0.0029081532591725685\n",
+      "Probabilitas Reward    :  0.5\n",
+      "Probabilitas Total     :  0.00012724818667571064\n",
+      "\n",
+      "\n",
+      "Nilai Probabilitas SUM :  0.00012724818667571064\n",
+      "Nilai Error        SUM :  2.579391193515038\n"
      ]
     }
    ],
@@ -208,6 +226,8 @@
     "    print(\"N                 : \" , N)\n",
     "    print(\"lambda_t (0.5*t)  : \" , lambda_t)\n",
     "    print(\"k_sigma           : \" , k_sigma)\n",
+    "    print(\"t                 : \" , t)\n",
+    "    print(\"y                 : \" , y)\n",
     "    \n",
     "    i = 0 # Variabel untuk menampung perulangan\n",
     "    while paths != []: ## Perulangan untuk menghitung probabilitas dan error\n",
